Fixed advert and spacing

--- a/src/css/_answers.scss
+++ b/src/css/_answers.scss
@@ -13,7 +13,7 @@
 .answers__item {
     @include f-textSans;
     position: relative;
-    font-size: 18px;
+    font-size: 16px;
     display: inline-block;
     vertical-align: top;
     margin: 0 ($gs-gutter / 2) ($gs-gutter / 2) 0;
@@ -53,11 +53,11 @@
     }
 
     @media (min-width: $breakpoint1) {
-        font-size: 20px;
         width: calc(50% - #{$gs-gutter / 2});
     }
 
     @media (min-width: $breakpoint2) {
+        font-size: 18px;
         width: calc(25% - #{$gs-gutter / 2});
     }
 }
@@ -89,7 +89,7 @@
 
 .answers__item--full {
     @media (min-width: $breakpoint1) {
-        //font-size: 20px;
+        font-size: 20px;
         height: 300px;
         text-align: center;
         margin-bottom: ($gs-gutter / 2 + $gs-baseline + 16px);
