--- a/src/css/_common.scss
+++ b/src/css/_common.scss
@@ -62,6 +62,7 @@ h3 {
 
 h3 + h2 {
     margin-top: -$gs-baseline;
+    @include v-spacing(margin-bottom);
 }
 
 h4 {
