--- a/src/css/_style.scss
+++ b/src/css/_style.scss
@@ -193,7 +193,7 @@ body::after {
     max-width: gs-span(8);
 
     &.has-constituency {
-        max-height: 60px;
+        max-height: 200px;
         padding-top: ($gs-baseline * 2);
         margin-top: ($gs-baseline * 2);
     }
